@@ -1,3 +1,12 @@
+2016-11-15  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/arts/xml/__init__.py:
+
+	Fixed check for '.gz' file ending. Exception is thrown if one attends to
+	save a zipped file in binary format.
+
+	Use 'wt' mode when opening files to fix the writing of gzipped files.
+
 2016-11-10  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/tovs.py:
